--- a/FluentBit/parser.conf
+++ b/FluentBit/parser.conf
@@ -1,4 +1,8 @@
 [PARSER]
-    Name        docker
+    Name        json_parser
     Format      json
+    Time_Key    timestamp
+    Time_Keep   On
+    Decode_Field_As   escaped_utf8    log    do_next
+    Decode_Field json log
     
