--- a/Quickwit/index-config.yaml
+++ b/Quickwit/index-config.yaml
@@ -1,4 +1,4 @@
-version: 0.7
+version: 0.8
 
 index_id: fluentbit-logs
 
@@ -7,9 +7,8 @@ doc_mapping:
   field_mappings:
     - name: timestamp
       type: datetime
-      input_formats:
-        - unix_timestamp
-      output_format: unix_timestamp_secs
+      input_formats: [unix_timestamp]
+      # output_format: unix_timestamp_secs
       fast: true
   timestamp_field: timestamp
 
