--- a/Blazor/Dockerfile
+++ b/Blazor/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY Blazor.csproj .
 RUN dotnet restore Blazor.csproj
@@ -6,7 +6,8 @@ COPY . .
 RUN dotnet build Blazor.csproj -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish Blazor.csproj -c Release -o /app/publish
+RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages \
+   dotnet publish Blazor.csproj -c Release -o /app/publish
 
 FROM nginx:alpine AS final
 WORKDIR /usr/share/nginx/html
